# rawtools

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  setup.cfg  tox.ini
docs/: README.md
src/rawtools/: __init__.py  cli.py  cobs_decode.py  rawtools.py  utils.py
tests/: __init__.py  test_cli.py
