[metadata]
name = rawtools
version = attr: rawtools.__version__
description = A sample Python project
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/loepfe-schl/rawtools/tree/master
project_urls =
    Source = https://github.com/loepfe-schl/rawtools
author = Adrian Schlatter
license = none
license_files = LICENSE

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Utilities
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    loepfe
    development
    debug
    raw data
    cobs
    prisma
    zenit+

[options]
package_dir = 
    = src
packages = find:
include_package_data = True
python_requires = >=3.5, <4
install_requires =
    cobs
    numpy
    plumbum

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using:
# pip install -e .[dev,test]
test =
    check-manifest
    setuptools>=40.5.0
    flake8
    pytest
    coverage
dev =
    tox
    twine

[options.entry_points]
console_scripts =
    rt = rawtools.cli:main

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**

[coverage:run]
command_line = -m pytest
branch = True

[coverage:report]
omit = tests/*

